added the  all the work experience and fix styling

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@ In 2020, I transferred to the University of Illinois at Chicago to pursue my int
     </p>
   </div>
 
-  <button class="project_collapse"><i class="fas fa-briefcase"></i> Work Experience</button>
+  <button class="project_collapse"><i class="fas fa-briefcase"></i> Work Experiences</button>
   <div class="portfolio_content">
     <p style="font-size: 14px;">
-      <strong style="font-size: 24px;">Security Operation  Intern</strong>
+      <strong style="display: block; margin-bottom: 0px; font-size: 24px;">Security Operation  Intern</strong>
       <strong style="font-size: 15px;"> Workiva (August 2022 – Present) </strong> 
       
       • Developed automated biweekly custom reports for SOC health analysis using Workiva Chain API and SQL <br/>
@@ -78,15 +78,23 @@ In 2020, I transferred to the University of Illinois at Chicago to pursue my int
 
        <br/>
 
-
-      <strong style="font-size: 24px;">Software Engineering  Intern</strong>
+      <strong style="display: block; margin-bottom: 0px; font-size: 24px;">Software Engineering  Intern</strong>
        <Strong  style="font-size: 15px;" >Discover Financial Services  (Summer 2022) </Strong>
 
        • Worked on the loans teams to build new features where users can pay their loans on a weekly basis <br/>
        • Created pre and post performance tests for various APIs <br/>
        • Improved the payment processing button to show the user when the next payment is due <br/>
+  
+       <br/>
 
-      
+       <strong style="display: block; margin-bottom: 0px; font-size: 24px;">Client Solution Speacialist</strong>
+       <Strong  style="font-size: 15px;" >University of Illinois at Chicago (June 2021 –  May 2022) </Strong>
+
+       • Provide support for the configuration, deployment, and support of systems including computing servers <br/>
+       • Consult with clients, and personnel in other departments to resolve issues <br/>
+       • Administer network and data security, email security, antivirus, firewalls, etc. <br/>
+
+
     </p>
   </div>
 
