--- a/index.html
+++ b/index.html
@@ -94,19 +94,23 @@ In 2020, I transferred to the University of Illinois at Chicago to pursue my int
        • Consult with clients, and personnel in other departments to resolve issues <br/>
        • Administer network and data security, email security, antivirus, firewalls, etc. <br/>
 
-
     </p>
   </div>
 
   <button class="project_collapse"><i class="fas fa-certificate"></i> Certification</button>
   <div class="portfolio_content">
-    <p>
-      <strong>Microsoft Certified: Azure Developer Associate</strong><br />
-      - Certified in developing and deploying applications on Microsoft Azure<br /><br />
-
-      <strong>Oracle Certified Associate, Java SE 8 Programmer</strong><br />
-      - Certified in Java programming and application development<br /><br />
-    </p>
+    <div class="certification">
+      <img src="images/certification.png" alt="Certificate Icon" class="certification-icon">
+      <p class="certification-name">
+        <strong>Splunk Core Certified Power User</strong>
+      </p>
+    </div>
+    <div class="certification">
+      <img src="images/certification-2.jpeg" alt="Certificate Icon" class="certification-icon">
+      <p class="certification-name">
+        <strong>Application of the MITRE ATT&CK Framework</strong>
+      </p>
+    </div>
   </div>
 
   <button class="project_collapse"><i class="fas fa-project-diagram"></i> Projects</button>
