--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@ In 2020, I transferred to the University of Illinois at Chicago to pursue my int
   <button class="project_collapse"><i class="fas fa-project-diagram"></i> Projects</button>
   <div class="portfolio_content">
     <p>
-      <strong>Personal Finance Tracker</strong><br />
-      - Developed a web application using React and Node.js to track personal finances<br />
-      - Implemented user authentication and authorization using JWT<br /><br />
+      <strong>Place Holder </strong><br />
+      - Place Holder<br />
+      - Place Holder<br /><br />
 
-      <strong>Twitter Sentiment Analysis</strong><br />
-      - Used Python to analyze Twitter data and classify tweets into positive, negative, and neutral<br />
-      - Deployed the application on Heroku<br /><br />
+      <strong>Place Holder</strong><br />
+      - Place Holder<br />
+      - Place Holder<br /><br />
     </p>
   </div>
 
@@ -130,14 +130,14 @@ In 2020, I transferred to the University of Illinois at Chicago to pursue my int
   <div class="portfolio_content">
     <p>
       <strong>Computer Science Courses</strong><br />
-      - Data Structures and Algorithms<br />
-      - Operating Systems<br />
-      - Artificial Intelligence<br /><br />
+      - Place Holder<br />
+      - Place Holder<br />
+      - Place Holder<br /><br />
 
       <strong>Other Courses</strong><br />
-      - Financial Accounting<br />
-      - Microeconomics<br />
-      - Spanish I and II<br /><br />
+      - Place Holder<br />
+      - Place holder<br />
+      - Place Holder<br /><br />
     </p>
   </div>
 
@@ -151,17 +151,17 @@ In 2020, I transferred to the University of Illinois at Chicago to pursue my int
   <button class="project_collapse"><i class="fas fa-heart"></i> Interests</button>
   <div class="portfolio_content">
     <p>
-      - Playing video games<br />
-      - Watching movies and TV shows<br />
-      - Playing basketball and tennis<br /><br />
+      - Place Holder<br />
+      - Place Holder<br />
+      - Place Holder<br /><br />
     </p>
   </div>
 
   <button class="project_collapse"><i class="fas fa-music"></i> Hobbies</button>
   <div class="portfolio_content">
     <p>
-      - Playing guitar<br />
-      - Listening to music<br /><br />
+      - Place Holder<br />
+      - Place Holder<br /><br />
     </p>
   </div>
 </div>
