--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ In 2020, I transferred to the University of Illinois at Chicago to pursue my int
   <button class="project_collapse"><i class="fas fa-file-alt"></i> Resume</button>
   <div class="portfolio_content">
     <p>
-      You can find my resume <a href="resume.pdf">here</a>.
+      You can find my resume <a href="my-files/">here</a>.
     </p>
   </div>
 
