Modified a lot of stuff

--- a/index.html
+++ b/index.html
@@ -45,24 +45,19 @@
   <div class="portfolio_content">
     <p>
       <ul style="list-style:square;">
-      I spent my early childhood in a small remote village in Bangladesh before moving to a relatively large city where I studied until 10th grade. After that, my family and I moved to Chicago, which became our new home.
+        I spent my early childhood in a remote village in Bangladesh before moving to a relatively larger city where 
+        I studied until the 10th grade. Eventually, my family and I moved to Chicago, which we now call home. Growing up 
+        in different places has taught me many valuable lessons, but two principles that have remained with me are curiosity 
+        and kindness.
 
-Growing up in different places has taught me many things, but two values have stayed with me wherever I go: curiosity and kindness.
+        My college journey began at Northeastern Illinois University, where I spent a few semesters studying computer science. 
+        In 2020, I transferred to the University of Illinois at Chicago to further my passion for computer science and mathematics. 
 
-My college journey began at Northeastern Illinois University, where I spent a few semesters studying computer science. 
-In 2020, I transferred to the University of Illinois at Chicago to pursue my interest in computer science & mathemathics and to learn from a diverse group of students. I have taken many low and high  level classes, which you can see in the courses section. Over the years, I have also gained experience with several programming languages through internships and coursework, and I now feel comfortable using the following:
-        <br/> 
-        <br />
+        In my free time  I love to play around  with data to uncover interesting insights, 
+        and I have recently ventured into the exciting world of cybersecurity.
+
         
-        <strong>Languages</strong>
-        <div>
-        <li><i class="fab fa-cuttlefish"></i> C++</li>
-      <li><i class="fab fa-python"></i> Python</li>
-      <li><i class="fas fa-database"></i> SQL</li>
-      <li><i class="fas fa-code"></i> SPL</li>
-     <li><i class="fab fa-java"></i> Java</li>
-    <li><i class="fab fa-r-project"></i> R</li>
-      </ul>
+        
     </p>
   </div>
 
@@ -112,6 +107,24 @@ In 2020, I transferred to the University of Illinois at Chicago to pursue my int
       </p>
     </div>
   </div>
+
+
+  <button class="project_collapse"><i class="fas fa-shield-alt"></i> Skills</button>
+  <div class="portfolio_content">
+    <p>
+      <strong>Languages</strong>
+        <ul>
+        <li><i class="fab fa-cuttlefish"></i> C++</li>
+      <li><i class="fab fa-python"></i> Python</li>
+      <li><i class="fas fa-database"></i> SQL</li>
+      <li><i class="fas fa-code"></i> SPL</li>
+     <li><i class="fab fa-java"></i> Java</li>
+    <li><i class="fab fa-r-project"></i> R</li>
+      </ul>
+    </p>
+  </div>
+
+
 
   <button class="project_collapse"><i class="fas fa-project-diagram"></i> Projects</button>
   <div class="portfolio_content">
@@ -164,6 +177,19 @@ In 2020, I transferred to the University of Illinois at Chicago to pursue my int
       - Place Holder<br /><br />
     </p>
   </div>
+
+  <button class="project_collapse"><i class="fas fa-blog"></i> Blogging</button>
+  <div class="portfolio_content">
+    <p>
+      <strong>Blogging</strong><br />
+      - Place Holder<br />
+      - Place holder<br />
+      - Place Holder<br />
+    </p>
+  </div>
+
+
+
 </div>
   </body>
 </html>
