resume bug fixes

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
   <button class="project_collapse"><i class="fas fa-file-alt"></i> Resume</button>
   <div class="portfolio_content">
     <p>
-      You can find my resume <a href="my-files/">here</a>.
+      You can find my resume <a href="my-files/Mosrour-Tafadar-Resume.pdf">here</a>.
     </p>
   </div>
 
