changed the title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <script src="script.js"></script>
     
-  <title>my page</title>
+  <title>Mosrour Tafadar</title>
 <link rel="stylesheet" type="text/css" href="style.css">
   </head>
    
