broke something and fixing it

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" crossorigin="anonymous">
 
-<!-- Add this to load the Font Awesome JS -->
+<!-- this line load all the awesome icon -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-sZ/9+fUNdFif/7PxYzLSsPMI1CQ+FjLGRqZh+WZ+wI8gDp4dYa4w4wzZaMJtZ8c9G7JKSBytn2OyM4WkYYfOxw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <script src="script.js"></script>
