--- a/index.html
+++ b/index.html
@@ -46,16 +46,12 @@
   <div class="portfolio_content">
     <p>
       <ul style="list-style:square;">
-        I spent my early childhood in a remote village in Bangladesh before moving to a relatively larger city where 
-        I studied until the 10th grade. Eventually, my family and I moved to Chicago, which we now call home. Growing up 
-        in different places has taught me many valuable lessons, but two principles that have remained with me are curiosity 
-        and kindness.
-
-        My college journey began at Northeastern Illinois University, where I spent a few semesters studying computer science. 
-        In 2020, I transferred to the University of Illinois at Chicago to further my passion for computer science and mathematics. 
-
-        In my free time  I love to play around  with data to uncover interesting insights, 
-        and I have recently ventured into the exciting world of cybersecurity.
+        I spent my early childhood in a remote village in Bangladesh before moving to a relatively larger city, 
+        where I studied until the 10th grade. Eventually, my family and I moved to Chicago, which we now call home. 
+        Growing up in different places has taught me many valuable lessons, but there are two principles that I always 
+        strive to uphold: curiosity and kindness. For my college journey, I attended the University of Illinois at Chicago
+         and studied Computer Science and Mathematics. The deep complexities and limitless possibilities of this field continue
+          to inspire and motivate me every day. In mu free time, I love to read, travel, and spend time with my family. 
 
     </p>
   </div>
@@ -178,7 +174,6 @@
   </div>
 
   
-
   <button class="project_collapse"><i class="fas fa-blog"></i> Blogging</button>
   <div class="portfolio_content">
     <p>
