change work experience details

--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
       <strong style="display: block; margin-bottom: 0px; font-size: 24px;">Security Operation  Intern</strong>
       <strong style="font-size: 15px;"> Workiva (August 2022 – Present) </strong> 
       
-      • Developed automated biweekly custom reports for SOC health analysis using Workiva Chain, Wdesk, Jira API, and SQL<br/>
-      • Used the MITRE ATT&CK framework to evaluate the current tools and coverage in Workiva platforms <br/>
-      • Led the endpoint coverage inventory project to analyze current endpoint tools and close gaps.  <br/>
+      • Assist to triage and resolve production incidents related to the cloud platform and participated in root cause analysis<br/>
+      • Collaborate with other teams to address problems from incident response and implement long-term solutions.<br/>
+      • Enhance software tools coverage to improve monitoring, and automation with focus on security<br/>
+      • Utilized monitoring tools like Splunk to track system health and proactively resolve issues.<br/>
 
        <br/>
 
@@ -77,8 +78,18 @@
   
        <br/>
 
+       <strong style="display: block; margin-bottom: 0px; font-size: 24px;">Security Operation  Intern</strong>
+      <strong style="font-size: 15px;"> Workiva (January 2022 – May 2022) </strong> 
+      
+      • Contributed to the creation maintenance of security documentation, such as Standard Operating Procedures (SOPs)<br/>
+      • Analyzed security events using SIEM tools such as Splunk to detect and respond to potential security threats<br/>
+      • Assisted in incidents response, collaborating with cross-functional team to address and resolve security incidents<br/>
+       <br/>
+
+
+
        <strong style="display: block; margin-bottom: 0px; font-size: 24px;">Client Solution Speacialist</strong>
-       <Strong  style="font-size: 15px;" >University of Illinois at Chicago (June 2021 –  May 2022) </Strong>
+       <Strong  style="font-size: 15px;" >University of Illinois at Chicago (January 2021 –  Janury 2022) </Strong>
 
        • Provide support for the configuration, deployment, and support of systems including computing servers <br/>
        • Consult with clients, and personnel in other departments to resolve issues <br/>
