added the width & height but removed the border for smaller devices

--- a/blogging/blog-main.html
+++ b/blogging/blog-main.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Cool Blog</title>
   <style>
     /* Add your custom CSS styles here */
