--- a/blogging/blog-main.html
+++ b/blogging/blog-main.html
@@ -5,11 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Cool Blog</title>
   <style>
-    /* Add your custom CSS styles here */
-
     body {
       font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
+      background-color: #111111;
       margin: 0;
       padding: 0;
     }
@@ -29,25 +27,99 @@
       font-weight: bold;
     }
 
-    /* Hero section styles */
     .hero {
-      background-image: url("hero-background.jpg");
-      background-size: cover;
-      background-position: center;
-      padding: 100px;
-      text-align: center;
-      color: #ffffff;
-    }
+  background-image: url("/images/MyImage.jpg");
+  background-color: black;
+  background-size: cover;
+  background-position: center;
+  padding: 200px;
+  text-align: center;
+  color: #ffffff;
+  position: relative;
+}
 
-    .hero h1 {
-      font-size: 48px;
-      margin-bottom: 20px;
-    }
+.hero:before {
+  content: "";
+  background: rgba(0, 0, 0, 0.8); /* To change the background color opacity, change last value */
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
 
-    .hero p {
-      font-size: 24px;
-      margin-bottom: 40px;
-    }
+.hero h1 {
+  position: relative;
+  z-index: 1;
+  font-family: 'Pacifico', cursive;
+  font-size: 48px;
+  animation: floating 3s ease-in-out infinite;
+}
+
+@keyframes floating {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.hero span {
+  display: inline-block;
+  animation: rotating 4s linear infinite;
+}
+
+
+@keyframes rotating {
+  0% {
+    transform: rotateY(0);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
+.hero::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) translateZ(-50px);
+  width: 100px;
+  height: 100px;
+  background: radial-gradient(rgba(255, 255, 255, 0.9), transparent);
+  border-radius: 50%;
+  animation: pulsating 2s ease-in-out infinite;
+}
+
+@keyframes pulsating {
+  0% {
+    transform: translate(-50%, -50%) translateZ(-50px) scale(0.8);
+    opacity: 0.8;
+  }
+  50% {
+    transform: translate(-50%, -50%) translateZ(-50px) scale(1.2);
+    opacity: 0.4;
+  }
+  100% {
+    transform: translate(-50%, -50%) translateZ(-50px) scale(0.8);
+    opacity: 0.8;
+  }
+}
+
+
+
+
+
+
+
+
+
+
 
     /* Main content section styles */
     .main-content {
@@ -55,11 +127,17 @@
       margin: 0 auto;
       padding: 20px;
       text-align: center;
+     
     }
 
     h2 {
-      font-size: 32px;
-      margin-bottom: 30px;
+      position: relative;
+  z-index: 1;
+  font-family: 'Pacifico', cursive;
+  font-size: 48px;
+  animation: floating 3s ease-in-out infinite;
+  background-color: white;
+      
     }
 
     .blog-list {
@@ -191,14 +269,14 @@
 <body>
   <div class="header">
     <div class="header-links">
-      <a href="#">Home</a>
+      <a href="/index.html">Home</a>
       <a href="#">About</a>
       <a href="#">Contact</a>
-      <a href="#">Terms</a>
+      <a href="#">Saved For Later</a>
     </div>
   </div>
   <div class="hero">
-    <h1>Welcome to My Blog</h1>
+    <h1>Embracing Life's Journey: Navigating Challenges, Growing As a Person</h1>
     <p>Explore the latest trends, tips, and insights.</p>
   </div>
   <div class="main-content">
