Modified the Javascript and some blog item modification

--- a/blogging/blog-main.html
+++ b/blogging/blog-main.html
@@ -36,57 +36,21 @@
           placeholder="Search by tag"
         />
       </div>
-
       <div class="blog-list">
         <div class="blog-item">
           <a href="blog1.html">
-            <img src="blog1.jpg" alt="Blog 1" class="blog-image" />
+            <img src="/images/Bangladesh.webp" alt="Blog 1" class="blog-image" />
             <div class="blog-tags">
-              <span class="tag">Lifestyle</span>
+              <span class="tag" style="background-color: red">Lifestyle</span>
+              <span class="tag" style="background-color: blue">Bangladesh</span>
+              <span class="tag" style="background-color: yellowgreen">Sylhet</span>
+              <span class="tag" style="background-color: peru">Travel</span>
+              <span class="tag" style="background-color: palegreen">Hometown</span>
             </div>
-            <h3 class="blog-title">Blog Title 1</h3>
+            <h3 class="blog-title">Reflecting On My Recent Trip To Bangladesh</h3>
           </a>
-        </div>
+        </div>        
 
-        <div class="blog-item">
-          <a href="blog2.html">
-            <img src="blog2.jpg" alt="Blog 2" class="blog-image" />
-            <div class="blog-tags">
-              <span class="tag">Fashion</span>
-            </div>
-            <h3 class="blog-title">Blog Title 2</h3>
-          </a>
-        </div>
-
-        <div class="blog-item">
-          <a href="blog3.html">
-            <img src="blog3.jpg" alt="Blog 3" class="blog-image" />
-            <div class="blog-tags">
-              <span class="tag">Food</span>
-            </div>
-            <h3 class="blog-title">Blog Title 3</h3>
-          </a>
-        </div>
-
-        <div class="blog-item">
-          <a href="blog4.html">
-            <img src="blog4.jpg" alt="Blog 4" class="blog-image" />
-            <div class="blog-tags">
-              <span class="tag">Travel</span>
-            </div>
-            <h3 class="blog-title">Blog Title 4</h3>
-          </a>
-        </div>
-
-        <div class="blog-item">
-          <a href="blog4.html">
-            <img src="blog4.jpg" alt="Blog 5" class="blog-image" />
-            <div class="blog-tags">
-              <span class="tag">Travel</span>
-            </div>
-            <h3 class="blog-title">Blog Title 5</h3>
-          </a>
-        </div>
       </div>
     </div>
   </body>
