Added Revised  Resume and  added the copyright Tag

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <button class="project_collapse"><i class="fas fa-file-alt"></i> Resume</button>
       <div class="portfolio_content">
         <p>
-          You can find my resume <a href="my-files/Mosrour-Tafadar-Resume.pdf">here</a>.
+          You can find my resume <a href="my-files/mosrour-resume-v2.pdf">here</a>.
         </p>
       </div>
 
@@ -185,16 +185,14 @@
       </div>
 
       <button class="project_collapse"><i class="fas fa-blog"></i> Blogging</button>
-      <div class="portfolio_content">
-        <p>
-          <strong>Blogging</strong><br />
-          - Place Holder<br />
-          - Place holder<br />
-          - Place Holder<br />
-        </p>
-      </div>
-
+      
     </div>
+
+    <footer>
+      &copy; 2023 All rights reserved
+     </footer>
+
+
   </div>
 </body>
 
