added my name in copyright notice

--- a/blogging/blog-main.html
+++ b/blogging/blog-main.html
@@ -53,9 +53,9 @@
 
       </div>
     </div>
-    
+
    <footer>
-    &copy; 2023 All rights reserved
+    &copy; 2023 Mosrour Tafadar All rights reserved
    </footer>
 
   </body>
