--- a/blogging/blog-main.html
+++ b/blogging/blog-main.html
@@ -55,7 +55,7 @@
     </div>
 
    <footer>
-    &copy; 2023 Mosrour Tafadar All rights reserved
+    &copy; 2023 Mosrour Tafadar. All rights reserved
    </footer>
 
   </body>
