fixed the skills section space issues

--- a/index.html
+++ b/index.html
@@ -120,9 +120,10 @@
 
       <button class="project_collapse"><i class="fas fa-shield-alt"></i> Skills</button>
       <div class="portfolio_content">
+        <div class = "skills"> 
         <p>
-          <strong>Languages</strong>
-          <ul>
+          <strong class = "languages">Languages</strong>
+          <ul class = "prog">
             <li><i class="fab fa-cuttlefish"></i> C++</li>
             <li><i class="fab fa-python"></i> Python</li>
             <li><i class="fas fa-database"></i> SQL</li>
@@ -131,6 +132,7 @@
             <li><i class="fab fa-r-project"></i> R</li>
           </ul>
         </p>
+      </div>
       </div>
 
       <button class="project_collapse"><i class="fas fa-project-diagram"></i> Projects</button>
