Redesign the SKills section

--- a/index.html
+++ b/index.html
@@ -122,15 +122,46 @@
       <div class="portfolio_content">
         <div class = "skills"> 
         <p>
-          <strong class = "languages">Languages</strong>
-          <ul class = "prog">
-            <li><i class="fab fa-cuttlefish"></i> C++</li>
-            <li><i class="fab fa-python"></i> Python</li>
-            <li><i class="fas fa-database"></i> SQL</li>
-            <li><i class="fas fa-code"></i> SPL</li>
-            <li><i class="fab fa-java"></i> Java</li>
-            <li><i class="fab fa-r-project"></i> R</li>
-          </ul>
+
+          <div class="container">
+            <div>
+              <strong class="languages">Languages</strong>
+              <ul class="prog">
+                <li><i class="fab fa-cuttlefish"></i> C++</li>
+                <li><i class="fab fa-python"></i> Python</li>
+                <li><i class="fas fa-database"></i> SQL</li>
+                <li><i class="fas fa-code"></i> SPL</li>
+                <li><i class="fab fa-java"></i> Java</li>
+                <li><i class="fab fa-r-project"></i> R</li>
+              </ul>
+            </div>
+
+            <div>
+              <strong class="security-tools">Security Tools</strong>
+              <ul class="sec-tools-values">
+                <li><i class="fas fa-search"></i> Splunk</li>
+                <li><i class="fas fa-network-wired"></i> Wireshirk</li>
+                <li><i class="fas fa-user-shield"></i>CrowdStrike</li>
+                <li><i class="fas fa-umbrella"></i>Cisco Umbrella</li>
+                <li><i class="fas fa-laptop-code"></i>Jamf Pro</li>
+                <li><i class="fab fa-windows"></i>Microsoft Intune</li>
+              </ul>
+            </div>
+       
+            <div>
+              <strong class="other-skills">Other</strong>
+              <ul class="other-skills-values">
+                <li><i class="fas fa-chart-line"></i>Regression Analysis</li>
+                <li><i class="fas fa-cogs"></i> Big Data Mining</li>
+              </ul>
+            </div>
+
+            
+
+
+          </div>
+
+
         </p>
       </div>
       </div>
