--- a/index.html
+++ b/index.html
@@ -176,18 +176,30 @@
       </div>
 
       <button class="project_collapse"><i class="fas fa-file-alt"></i> Resume</button>
-      <div class="portfolio_content">
-        <p>
-          You can find my resume <a href="my-files/mosrour-resume-v2.pdf">here</a>.
+      <div class="portfolio_content resume" >
+        <p  class="resume-pdf">
+          Download my resume here <a href="my-files/mosrour-resume-v2.pdf">here</a>.
         </p>
       </div>
       <button class="project_collapse"><i class="fas fa-heart"></i> Interests</button>
       <div class="portfolio_content">
-        <p>
-          - Place Holder<br />
-          - Place Holder<br />
-          - Place Holder<br /><br />
+        <div class="Interest">
+        <p  >
+        Over the years, my interests have changed significantly, both in my personal life and academically. During my early years of growing up, I was fascinated by the vastness 
+        of the sky and science behind sunrises in the east and sunsets in the west. However, my fascination shifted in middle school as I developed a strong interest in math. Initially,
+         I started college with the intention of studying math, but my love for logic and computers leads me to study computer Science & Math. During my internship at Workiva, I discovered
+        a passion for working in the field of Security Operations, leading me to intern there for last 1.5 years and continuing. Lately, I have found myself interested in the following topics:
         </p>
+        <ul class="Interest_items">
+          <li>Item 1</li>
+          <li>Item 2</li>
+          <li>Item 3</li>
+        </ul>
+
+        <p>On a personal level, I have also been fascinated by the psychology of our brain and the factors that shape our thinking. I enjoy reading about these topics in my free time, particularly exploring how culture influences our decision-making processes.</p>
+ 
+
+      </div>
       </div>
 
       <button class="project_collapse"><i class="fas fa-music"></i> Hobbies</button>
