--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" crossorigin="anonymous">
 
   <!-- this line load all the awesome icon -->
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css" integrity="sha384-v2Tw72dyUXeU3y4aM2Y0tBJQkGfplr39mxZqlTBDUZAb9BGoC40+rdFCG0m10lXk" crossorigin="anonymous">
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
     integrity="sha512-sZ/9+fUNdFif/7PxYzLSsPMI1CQ+FjLGRqZh+WZ+wI8gDp4dYa4w4wzZaMJtZ8c9G7JKSBytn2OyM4WkYYfOxw=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
