modified style for Introduction Section

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <div class="portfolio_body">
       <button class="project_collapse"><i class="fas fa-info-circle"></i> About Me</button>
       <div class="portfolio_content">
+        <div class="Introduction">
         <p>
-        <ul style="list-style:square;">
           I spent my early childhood in a remote village in Bangladesh before moving to a relatively larger city,
           where I studied until the 10th grade. Eventually, my family and I moved to Chicago, which we now call home.
           Growing up in different places has taught me many valuable lessons, but there are two principles that I
@@ -61,8 +61,8 @@
           field continue
           to inspire and motivate me every day. In mu free time, I love to read, travel, and spend time with my
           family.
-
           </p>
+      </div>
       </div>
 
       <button class="project_collapse"><i class="fas fa-briefcase"></i> Work Experiences</button>
@@ -160,8 +160,6 @@
               </ul>
             </div>
           </div>
-
-
           </p>
         </div>
       </div>
@@ -186,7 +184,7 @@
         </p>
       </div>
 
-      
+
 
 
       <button class="project_collapse"><i class="fas fa-heart"></i> Interests</button>
