redesign the style of the website

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
       <button class="project_collapse"><i class="fas fa-briefcase"></i> Work Experiences</button>
       <div class="portfolio_content">
+        <div class="experience">
         <p style="font-size: 14px;">
           <strong style="display: block; margin-bottom: 0px; font-size: 24px;">Security Operation Intern</strong>
           <strong style="font-size: 15px;"> Workiva (August 2022 – Present) </strong>
@@ -106,8 +107,10 @@
           • Administer network and data security, email security, antivirus, firewalls, etc. <br />
         </p>
       </div>
+      </div>
       <button class="project_collapse"><i class="fas fa-certificate"></i> Certification</button>
       <div class="portfolio_content">
+        <div class="certifications">
         <div class="certification">
           <img src="images/certification.png" alt="Certificate Icon" class="certification-icon">
           <p class="certification-name">
@@ -121,12 +124,12 @@
           </p>
         </div>
       </div>
+      </div>
 
       <button class="project_collapse"><i class="fas fa-shield-alt"></i> Skills</button>
       <div class="portfolio_content">
         <div class="skills">
           <p>
-
           <div class="container">
             <div>
               <strong class="languages">Languages</strong>
