added color for each icon and finish the interest section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <br>
 
     <div class="portfolio_body">
-      <button class="project_collapse"><i class="fas fa-info-circle"></i> About Me</button>
+      <button class="project_collapse"><i class="fas fa-info-circle colorful-royal-blue"></i> About Me</button>
       <div class="portfolio_content">
         <div class="Introduction">
         <p>
@@ -65,7 +65,7 @@
       </div>
       </div>
 
-      <button class="project_collapse"><i class="fas fa-briefcase"></i> Work Experiences</button>
+      <button class="project_collapse"><i class="fas fa-briefcase colorful-navy-blue"></i> Work Experiences</button>
       <div class="portfolio_content">
         <div class="experience">
         <p style="font-size: 14px;">
@@ -108,7 +108,7 @@
         </p>
       </div>
       </div>
-      <button class="project_collapse"><i class="fas fa-certificate"></i> Certification</button>
+      <button class="project_collapse"><i class="fas fa-certificate colorful-gold"></i> Certification</button>
       <div class="portfolio_content">
         <div class="certifications">
         <div class="certification">
@@ -126,7 +126,7 @@
       </div>
       </div>
 
-      <button class="project_collapse"><i class="fas fa-shield-alt"></i> Skills</button>
+      <button class="project_collapse"><i class="fas fa-shield-alt colorful-gray"></i> Skills</button>
       <div class="portfolio_content">
         <div class="skills">
           <p>
@@ -167,7 +167,7 @@
         </div>
       </div>
 
-      <button class="project_collapse"><i class="fas fa-project-diagram"></i> Projects</button>
+      <button class="project_collapse"><i class="fas fa-project-diagram colorful-green"></i> Projects</button>
       <div class="portfolio_content">
         <p>
           <strong>Place Holder </strong><br />
@@ -180,7 +180,7 @@
         </p>
       </div>
 
-      <button class="project_collapse"><i class="fas fa-file-alt"></i> Resume</button>
+      <button class="project_collapse"><i class="fas fa-file-alt colorful-blue"></i> Resume</button>
       <div class="portfolio_content resume">
         <p class="resume-pdf">
           Download my resume here <a href="my-files/mosrour-resume-v2.pdf">here</a>.
@@ -190,13 +190,13 @@
 
 
 
-      <button class="project_collapse"><i class="fas fa-heart"></i> Interests</button>
+      <button class="project_collapse"><i class="fas fa-heart colorful-heart"></i> Interests</button>
       <div class="portfolio_content">
         <div class="Interest">
           <p>
             Over the years, my interests have changed significantly, both in my personal life and academically. During
             my early years of growing up, I was fascinated by the vastness
-            of the sky and science behind sunrises in the east and sunsets in the west. However, my fascination shifted
+            of the sky and the formation of the world. However, my fascination shifted
             in middle school as I developed a strong interest in math. Initially,
             I started college with the intention of studying math, but my love for logic and computers leads me to study
             computer Science & Math. During my internship at Workiva, I discovered
@@ -204,18 +204,17 @@
             continuing. Lately, I have found myself interested in the following topics:
           </p>
           <ul class="Interest_items">
-            <li>Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
+            <li><i class="fas fa-star"></i> Security</li>
+            <li><i class="fas fa-star"></i>Big Data analysis </li>
+            <li><i class="fas fa-star"></i>Software Engineering </li>
           </ul>
-
           <p>On a personal level, I have also been fascinated by the psychology of our brain and the factors that shape
             our thinking. I enjoy reading about these topics in my free time, particularly exploring how culture
             influences our decision-making processes.</p>
         </div>
       </div>
 
-      <button class="project_collapse"><i class="fas fa-music"></i> Hobbies</button>
+      <button class="project_collapse"><i class="fas fa-music colorful-purple"></i> Hobbies</button>
       <div class="portfolio_content">
         <p>
           - Place Holder<br />
@@ -223,7 +222,7 @@
         </p>
       </div>
 
-      <button class="project_collapse"><i class="fas fa-blog"></i> Blogging</button>
+      <button class="project_collapse"><i class="fas fa-blog colorful-orange"></i> Blogging</button>
 
     </div>
 
@@ -231,10 +230,6 @@
     <footer>
       &copy; 2023 Mosrour Tafadar. All rights reserved
     </footer>
-
-
-
-
   </div>
 </body>
 
