added project and Hobby section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           Chicago
           and studied Computer Science and Mathematics. The deep complexities and limitless possibilities of this
           field continue
-          to inspire and motivate me every day. In mu free time, I love to read, travel, and spend time with my
+          to inspire and motivate me every day. In my free time, I love to read, travel, and spend time with my
           family.
           </p>
       </div>
@@ -169,15 +169,24 @@
 
       <button class="project_collapse"><i class="fas fa-project-diagram colorful-green"></i> Projects</button>
       <div class="portfolio_content">
-        <p>
-          <strong>Place Holder </strong><br />
-          - Place Holder<br />
-          - Place Holder<br /><br />
+        <div class="projects">
+        <p style="font-size: 15px;">
+         <strong style="display: block; margin-bottom: 0px; font-size: 18px;">Recommendation (Inspired by how Netflix recommendation algorithm works) -> <a href="https://github.com/mtafadar/Recommendation-App" target="_blank">github</a></strong>
+          • Wrote a C++ program that can predict people’s preferences about books, movies, anime and music.<br />
+          • Developed a mathematical formula and transferred into an algorithm that can be applied to any user in a database.<br />
+          • Created better prediction considering ratings from the user by comparing with other user ratings.<br />
+          <br/>
+          <strong style="display: block; margin-bottom: 0px; font-size: 18px;">Search (Inspired by how Google search engine works) -> <a href="https://github.com/mtafadar/Search-App" target="_blank">github</a></strong>
+          • Wrote a C++ console program that allows the user to enter many search queries and retrieve the matching web pages.<br />
+          • Built an inverted index by processing the entire document and then catalogued where each word was located.<br />
+          • Developed a method for users to search a single term or a compound sequence of multiple terms.<br />
+          <br/>
 
-          <strong>Place Holder</strong><br />
-          - Place Holder<br />
-          - Place Holder<br /><br />
+          <strong style="display: block; margin-bottom: 0px; font-size: 18px;">Baccarat Game -> <a href="https://github.com/mtafadar/Baccarat-Game" target="_blank">github</a></strong>
+          • A game that mirrors the classic Baccarat casino game with animations and transitions<br />
+          • Anyone can join from anywhere with port number and IP address to bet money on Players, Bankers or Draw<br />
         </p>
+      </div>
       </div>
 
       <button class="project_collapse"><i class="fas fa-file-alt colorful-blue"></i> Resume</button>
@@ -186,8 +195,6 @@
           Download my resume here <a href="my-files/mosrour-resume-v2.pdf">here</a>.
         </p>
       </div>
-
-
 
 
       <button class="project_collapse"><i class="fas fa-heart colorful-heart"></i> Interests</button>
@@ -216,17 +223,16 @@
 
       <button class="project_collapse"><i class="fas fa-music colorful-purple"></i> Hobbies</button>
       <div class="portfolio_content">
-        <p>
-          - Place Holder<br />
-          - Place Holder<br /><br />
-        </p>
+        <div class="Hobbies">
+          <ul class="Interest_items">
+            <li><i class="fas fa-star"></i> Gardening</li>
+            <li><i class="fas fa-star"></i>Fictional Reading</li>
+            <li><i class="fas fa-star"></i>Making Memes</li>
+          </ul>
+        </div>        
       </div>
-
       <button class="project_collapse"><i class="fas fa-blog colorful-orange"></i> Blogging</button>
-
     </div>
-
-
     <footer>
       &copy; 2023 Mosrour Tafadar. All rights reserved
     </footer>
