added my first blog

--- a/blogging/blog-main.html
+++ b/blogging/blog-main.html
@@ -38,7 +38,7 @@
       </div>
       <div class="blog-list">
         <div class="blog-item">
-          <a href="blog1.html">
+          <a href="/blogging/blog1.html">
             <img src="/images/Bangladesh.webp" alt="Blog 1" class="blog-image" />
             <div class="blog-tags">
               <span class="tag" style="background-color: red">Lifestyle</span>
