--- a/blogging/blog1.html
+++ b/blogging/blog1.html
@@ -104,7 +104,7 @@
         As we traversed the narrow, one-way road, the sight of cows leisurely strolling and women diligently drying unmilled rice along the edges of lush fields filled me with a mix of familiarity. It had been nearly a decade since
          my last visit, but the memories of this route remained vivid in my mind. We saw elderly folks gracefully walking along the road, some shirtless but  have a widen smiles. Throughout the day, I was fortunate enough to visit some
         significant places that held profound meaning in my life. I went to meet Mohodissab, a revered Imam in the area. Then, we made our way to my boro fufu's house and my kala house and later on to my nana bari. Despite the shortage of time, I was also able to perform Ziyarah for my grandfather, grandmother, and my kala.   It was about 10.00 pm when we return back to Sylhet and as I  head to bed to rest 
-        the realization that came to my mind that where I am from, where I am and my deeply rooted  love for those place. 
+        the realization that came to my mind  where I am from, where I am and my deeply rooted  love for those place. 
      </p>
      <p>
         Additionally, I found myself chatting with someone a lot more than I had expected. There were nights when our conversations lasted until 2.00 am. Perhaps, there was something I didn't fully realize at the time. Why did I chat with that person so much? That is something I will write about on a different day. I must say that person was sweet and had such a kind heart, and a I learned a lot of things. Perhaps, it's fair to say she has changed my thinking process in some way..
