--- a/blogging/blog1.html
+++ b/blogging/blog1.html
@@ -122,7 +122,7 @@
 
     
   <footer class="footer">
-    &copy; 2023 Your Website | All rights reserved
+    &copy; 2023 Mosrour Tafadar | All rights reserved
 </footer>
 
 
