fixed some of of styling issues with phone

--- a/blogging/blog1.html
+++ b/blogging/blog1.html
@@ -110,7 +110,7 @@
      <div>
         <img class="village-pic" src="/images/Infront-of-our-house.jpg" alt="Image with Shahjalal Airport">
     </div>
-    <p class="Image-caption-dhaka"> Standing in front of the house where I grow up </p>
+    <p class="Image-caption-village"> Standing in front of the house where I grow up </p>
 
 
         
@@ -119,7 +119,7 @@
      </p>
     
     <p>As my 10 days short trip came to end and I prepare to return, I know that I may not see many of the same faces when I come back. 
-        Some will be busy with their lives, and with some, I may lose touch and some will set their life in diffent country where I may not get time to visit. And sadly, some may have passed away.
+        Some will be busy with their lives, and with some, I may lose touch and some will set their life in different country where I may not get time to visit. And sadly, some may have passed away.
          But until next time, Bangladesh, until we meet again.</p>
 
      <br> 
