fixed certification style

--- a/blogging/blog1.html
+++ b/blogging/blog1.html
@@ -20,7 +20,7 @@
         I had always wanted to write about my journey to Bangladesh, but I wasn't sure where to start. 
         I finally decided to create my own website, where I could share my story with the world. 
         It took some extra time and effort,  but it was definitely worth it. As I look back my journey to Bangladesh, 
-        I find myself looking back on an extraordinary journey. A trip that has left an indelible mark on my heart and soul. 
+        I find myself looking back on an extraordinary journey. A trip that has left an indelible mark on my heart.
 
         <br>
         <br>
